Messy CSS. Endpoint before class

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,32 +8,40 @@
     <title>William Gannon</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
     <!--Header bar with "Name" and 3 links-->
     <header>
-        <h1>William Gannon</h1>
-        <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <div class="dHead">
+            <h1>William Gannon</h1>
+            <nav>
+                <ul>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="index.html">About</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
     <!--"portfolio" box with photos and labels, 960px wide-->
-    <div>
-        <h2>Portfolio</h2>
-        <!--Horizontal Line; can I do <hr>?-->
-        <hr>
-        <!--field of photos and labels-->
-        <a href="#1" target="_blank"><img src="#" alt="project1"></a>
+    <div class="dBody">
+        <div class="dBox">
+            <h2>Portfolio</h2>
+            <!--Horizontal Line; can I do <hr>?-->
+            <hr>
+            <!--field of photos and labels display: inline-block-->
+            <a href="#1" target="_blank"><img src="#" alt="project1"></a>
 
-        <a href="#2" target="_blank"><img src="#" alt="project2"></a>
+            <a href="#2" target="_blank"><img src="#" alt="project2"></a>
 
-        <a href="#3" target="_blank"><img src="#" alt="project3"></a>
+            <a href="#3" target="_blank"><img src="#" alt="project3"></a>
 
-        <a href="#4" target="_blank"><img src="#" alt="project4"></a>
+            <a href="#4" target="_blank"><img src="#" alt="project4"></a>
 
-        <a href="#5" target="_blank"><img src="#" alt="project5"></a>
+            <a href="#5" target="_blank"><img src="#" alt="project5"></a>
 
+        </div>
     </div>
     <!--Footer; floating with copyright-->
     <footer>
