--- a/contact.html
+++ b/contact.html
@@ -8,39 +8,48 @@
     <title>William Gannon</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
     <!--Header bar with "Name" and 3 links-->
     <header>
-        <h1>William Gannon</h1>
-        <ul>
-            <li><a href="index.html">About</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+        <div class="dHead">
+            <h1>William Gannon</h1>
+            <nav>
+                <ul>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="index.html">About</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+    
 
     <!--"Contact" form - name, email, message; 960px wide-->
-    <div>
-        <h2>Contact</h2>
-        <!--Horizontal Line; can I do <hr>?-->
-        <hr>
-        <!--FORM-->
-        <form action="mailto:wgannon@austin.utexas.edu">
-            Name
-            <br>
-            <input type="text" name="FirstName">
-            <br>
-            Email
-            <br>
-            <input type="text" name="email">
-            <br>
-            Message
-            <br>
-            <input type="text" name="message">
-            <br>
-            <input type="submit" name="Submit">
-        </form>
+    <div class="dBody">
+        <div class="dBox">
+            <h2>Contact</h2>
+            <!--Horizontal Line; can I do <hr>?-->
+            <hr>
+            <!--FORM-->
+            <form action="mailto:wgannon@austin.utexas.edu">
+                Name
+                <br>
+                <input type="text" name="FirstName">
+                <br>
+                Email
+                <br>
+                <input type="text" name="email">
+                <br>
+                Message
+                <br>
+                <input type="text" name="message">
+                <br>
+                <input type="submit" name="Submit">
+            </form>
+        </div>
     </div>
+
     <!--Footer; floating with copyright-->
     <footer>
         <p>&copy 2018 William Gannon</p>
