--- a/portfolio.html
+++ b/portfolio.html
@@ -31,16 +31,19 @@
             <!--Horizontal Line; can I do <hr>?-->
             <hr>
             <!--field of photos and labels display: inline-block-->
-            <a href="#1" target="_blank"><img src="#" alt="project1"></a>
+            <div class="empty">
+                <a href="#1" target="_blank"><img class="jobs" src="https://picsum.photos/300/225" alt="project1"></a>
+                    <div class="banner">
+                        <div class="jName">Job 1</div>
+                    </div>
+                <a href="#2" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random" alt="project2"></a>
 
-            <a href="#2" target="_blank"><img src="#" alt="project2"></a>
+                <a href="#3" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random" alt="project3"></a>
 
-            <a href="#3" target="_blank"><img src="#" alt="project3"></a>
+                <a href="#4" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random" alt="project4"></a>
 
-            <a href="#4" target="_blank"><img src="#" alt="project4"></a>
-
-            <a href="#5" target="_blank"><img src="#" alt="project5"></a>
-
+                <a href="#5" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random?random" alt="project5"></a>
+            </div>
         </div>
     </div>
     <!--Footer; floating with copyright-->
