Most layout and content done. Portfolio and dBody tweaking left

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <!--Header bar with "Name" and 3 links-->
     <header>
         <div class="dHead">
-            <h1>William Gannon</h1>
+            <h1 class="wg">William Gannon</h1>
             <nav>
                 <ul>
                     <li><a href="contact.html">Contact</a></li>
@@ -35,17 +35,17 @@
             <form action="mailto:wgannon@austin.utexas.edu">
                 Name
                 <br>
-                <input type="text" name="FirstName">
+                <input class="info" type="text" name="fullname" placeholder="John Smith">
                 <br>
                 Email
                 <br>
-                <input type="text" name="email">
+                <input class="info" type="text" name="email" placeholder="example@gmail.com">
                 <br>
                 Message
                 <br>
-                <input type="text" name="message">
+                <input class="message" type="text" name="message">
                 <br>
-                <input type="submit" name="Submit">
+                <input class="submit" type="submit" name="Submit">
             </form>
         </div>
     </div>
