--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Header bar with "Name" and 3 links-->
     <header>
         <div class="dHead">
-            <h1>William Gannon</h1>
+            <h1 class="wg">William Gannon</h1>
             <nav>
                 <ul>
                     <li><a href="contact.html">Contact</a></li>
@@ -32,14 +32,22 @@
             <hr>
             <!--block of photo and bio-->
             <img id="bioPic" src="assets/images/Bio.jpg" alt="Smile!">
-                <p class="aboutMe">
-                Then we type a whole bunch of text as a Bio. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. 
-                Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. 
-                Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. 
-                Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. 
-                Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. 
-                Cras ac leo purus. Mauris quis diam velit.
+                <p class="aboutMe">My name is William Gannon - but you can call me Bill. 
+                    I work for the University of Texas Libraries as Technical Staff. Currently,
+                    I am enrolled in the University of Texas Fullstack Coding Bootcamp. I am studying <strong>HTML</strong>, 
+                    <strong>CSS</strong>, and <strong>JavaScript</strong> and look forward to learning much more in the coming months. 
+                    Upon completion of the program I will be looking to start a Development career here in Austin. 
+                    <br>
+                    <br>
+                    I moved to Austin in 2012 with my wife, Cynthia. We previously lived in Boston, where we met while 
+                    attending Brandeis University. There I double-majored in Economics and Philosophy. I am 
+                    originally from Albany, New York and still have a lot of family there.
+                    <br>
+                    <br>
+                    My hobbies include cycling, film, pub trivia, and travel. I recently visited Mexico City for 
+                    the first time and look forward to returning soon. 
+
+                
                 </p>
         </div>
     </div>   
