--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <!--Header bar with "Name" and 3 links-->
     <header>
         <div class="dHead">
-            <h1>William Gannon</h1>
+            <h1 class="wg">William Gannon</h1>
             <nav>
                 <ul>
                     <li><a href="contact.html">Contact</a></li>
