fixed portfolio hover issues

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,17 +32,31 @@
             <hr>
             <!--field of photos and labels display: inline-block-->
             <div class="empty">
-                <a href="#1" target="_blank"><img class="jobs" src="https://picsum.photos/300/225" alt="project1"></a>
+                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random" alt="project1">
                     <div class="banner">
                         <div class="jName">Job 1</div>
                     </div>
-                <a href="#2" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random" alt="project2"></a>
-
-                <a href="#3" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random" alt="project3"></a>
-
-                <a href="#4" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random" alt="project4"></a>
-
-                <a href="#5" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random?random" alt="project5"></a>
+                </a>
+                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random" alt="project2">
+                    <div class="banner">
+                        <div class="jName">Job 2</div>
+                    </div>
+                </a>
+                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random" alt="project3">
+                    <div class="banner">
+                        <div class="jName">Job 3</div>
+                    </div>
+                </a>
+                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random?random" alt="project4">
+                    <div class="banner">
+                        <div class="jName">Job 4</div>
+                    </div>
+                </a>
+                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random?random?random" alt="project5">
+                    <div class="banner">
+                        <div class="jName">Job 5</div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
