Ready for submission, still has phantom href

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img id="bioPic" src="assets/images/Bio.jpg" alt="Smile!">
                 <p class="aboutMe">My name is William Gannon - but you can call me Bill. 
                     I work for the University of Texas Libraries as Technical Staff. Currently,
-                    I am enrolled in the University of Texas Fullstack Coding Bootcamp. I am studying <strong>HTML</strong>, 
+                    I am enrolled in the University of Texas Full Stack Coding Bootcamp. I am studying <strong>HTML</strong>, 
                     <strong>CSS</strong>, and <strong>JavaScript</strong> and look forward to learning much more in the coming months. 
                     Upon completion of the program I will be looking to start a Development career here in Austin. 
                     <br>
