--- a/portfolio.html
+++ b/portfolio.html
@@ -32,14 +32,14 @@
             <hr>
             <!--field of photos and labels display: inline-block-->
             <div class="empty">
-                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random" alt="project1">
+                <a class="port" href="_blank" target="_blank"><img class="jobs" src="assets/images/crystalGameImage.PNG" alt="project1">
                     <div class="banner">
-                        <div class="jName">Job 1</div>
+                        <div class="jName">Crystal Game</div>
                     </div>
                 </a>
-                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random" alt="project2">
+                <a class="port" href="_blank" target="_blank"><img class="jobs" src="assets/images/TriviaGame.PNG" alt="project2">
                     <div class="banner">
-                        <div class="jName">Job 2</div>
+                        <div class="jName">Trivia Game</div>
                     </div>
                 </a>
                 <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random" alt="project3">
