--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,12 @@
             <hr>
             <!--field of photos and labels display: inline-block-->
             <div class="empty">
-                <a class="port" href="_blank" target="_blank"><img class="jobs" src="assets/images/crystalGameImage.PNG" alt="project1">
+                <a class="port" href="https://w-j-gannon.github.io/unit-4-game/" target="_blank"><img class="jobs" src="assets/images/crystalGameImage.PNG" alt="project1">
                     <div class="banner">
                         <div class="jName">Crystal Game</div>
                     </div>
                 </a>
-                <a class="port" href="_blank" target="_blank"><img class="jobs" src="assets/images/TriviaGame.PNG" alt="project2">
+                <a class="port" href="https://w-j-gannon.github.io/TriviaGame/" target="_blank"><img class="jobs" src="assets/images/TriviaGame.PNG" alt="project2">
                     <div class="banner">
                         <div class="jName">Trivia Game</div>
                     </div>
