--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>William Gannon</title>
+    <link rel="icon" href="assets/images/w.png">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
