giphy added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,9 @@
                         <div class="jName">Trivia Game</div>
                     </div>
                 </a>
-                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random" alt="project3">
+                <a class="port" href="https://w-j-gannon.github.io/giphyAPI/" target="_blank"><img class="jobs" src="assets/images/giphyAPI.PNG" alt="project3">
                     <div class="banner">
-                        <div class="jName">Job 3</div>
+                        <div class="jName">GIF Board</div>
                     </div>
                 </a>
                 <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random?random" alt="project4">
