--- a/portfolio.html
+++ b/portfolio.html
@@ -48,9 +48,9 @@
                         <div class="jName">GIF Board</div>
                     </div>
                 </a>
-                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random?random" alt="project4">
+                <a class="port" href="https://w-j-gannon.github.io/trainScheduler/" target="_blank"><img class="jobs" src="assets/images/TrainShot.PNG" alt="project4">
                     <div class="banner">
-                        <div class="jName">Job 4</div>
+                        <div class="jName">Train Schedule</div>
                     </div>
                 </a>
                 <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random?random?random" alt="project5">
