add On This Day to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,9 +53,9 @@
                         <div class="jName">Train Schedule</div>
                     </div>
                 </a>
-                <a class="port" href="_blank" target="_blank"><img class="jobs" src="https://picsum.photos/300/225?random?random?random?random?random" alt="project5">
+                <a class="port" href="https://zachselindh.github.io/On-This-Day-Project/" target="_blank"><img class="jobs" src="assets/images/on-this-day-4x3.png" alt="project5">
                     <div class="banner">
-                        <div class="jName">Job 5</div>
+                        <div class="jName">On This Day</div>
                     </div>
                 </a>
             </div>
